[gd_scene load_steps=6 format=3 uid="uid://csei5wo5mukis"]

[ext_resource type="Script" uid="uid://ccfhx2mtxkqs" path="res://src/gameplay/mechanics/inventory/inventory_slots_panel/inventory_item_slot.gd" id="1_j2uwr"]
[ext_resource type="Theme" uid="uid://k0ll6m3w6kk3" path="res://src/ui/themes/items_themes/unique_border.tres" id="2_j05kh"]
[ext_resource type="Texture2D" uid="uid://bup16gck8m42v" path="res://assets/ui/buttons.png" id="3_x5bq1"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_eqp28"]
bg_color = Color(0.0941176, 0.0941176, 0.105882, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.39, 0.31, 0.29, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_0ne2w"]
atlas = ExtResource("3_x5bq1")
region = Rect2(248, 20, 17, 20)

[node name="ItemSlot" type="Panel"]
custom_minimum_size = Vector2(96, 96)
anchors_preset = -1
anchor_right = 0.075
anchor_bottom = 0.133333
script = ExtResource("1_j2uwr")
metadata/_edit_use_anchors_ = true

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="RarityTexture" type="TextureRect" parent="MarginContainer"]
layout_mode = 2

[node name="ItemTexture" type="TextureRect" parent="MarginContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Stacks" type="Label" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8

[node name="UniqueBorder" type="Panel" parent="."]
visible = false
custom_minimum_size = Vector2(92, 92)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -46.0
offset_top = -46.0
offset_right = 46.0
offset_bottom = 46.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = ExtResource("2_j05kh")

[node name="LockedPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_eqp28")

[node name="LockTexture" type="TextureRect" parent="LockedPanel"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -24.0
offset_top = -24.0
offset_right = 24.0
offset_bottom = 24.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_0ne2w")
expand_mode = 3
stretch_mode = 5
